<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewInformationAcitity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showButton_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView_get_saved_data"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_layout"
        android:onClick="showPublicData"
        android:padding="15dp"
        android:text="@string/show_button_public"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showButton_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_get_saved_data"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/showButton_public"
        android:background="@drawable/button_layout"
        android:onClick="showPrivateData"
        android:padding="15dp"
        android:text="@string/show_button_private"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showButton_public"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_layout"
        android:onClick="back"
        android:padding="15dp"
        android:text="@string/back_button"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/textView_get_saved_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_saved_data"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:hint="@string/saved_information" />

    <TextView
        android:id="@+id/textView_saved_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/text_view_saved_data"
        android:textAllCaps="true"
        android:textStyle="bold" />

</RelativeLayout>
