<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText_data"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_layout"
        android:onClick="savePublicly"
        android:padding="15dp"
        android:text="@string/save_button_public"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_data"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/saveButton_public"
        android:background="@drawable/button_layout"
        android:onClick="savePrivately"
        android:padding="15dp"
        android:text="@string/save_button_private"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveButton_public"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_layout"
        android:onClick="viewInformation"
        android:padding="15dp"
        android:text="@string/view_button"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/editText_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_data"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:autofillHints=""
        android:hint="@string/edit_text_data"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/text_view_data"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>